.it/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: review-svc
spec:
  selector:
    app: $CI_PROJECT_NAME
  clusterIP: None
  ports:
    - name: api
      port: 8080
      targetPort: api
