.it/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: review-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  rules:
    - host: ${DEFAULT_INGRESS_URL}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: review-svc
                port:
                  name: api
